add publicities crud
