# swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: Node.js Sign-up and Verification API
-  description: Node.js + MongoDB - API with email sign-up, verification, authentication and forgot password
+  title: Medbox API
+  description: MedBox API
   version: 1.0.0
 
 servers:
@@ -150,7 +150,7 @@ paths:
       description: Admin users can revoke the tokens of any account, regular users can only revoke their own tokens.
       operationId: revokeToken
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       parameters:
         - in: cookie
           name: refreshToken
@@ -405,7 +405,7 @@ paths:
       description: Restricted to admin users.
       operationId: getAllAccounts
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       responses:
         "200":
           description: An array of all accounts
@@ -447,7 +447,7 @@ paths:
       description: Restricted to admin users.
       operationId: createAccount
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -475,7 +475,7 @@ paths:
                   example: "pass123"
                 role:
                   type: string
-                  enum: [Admin, User]
+                  enum: [ Admin, User ]
               required:
                 - title
                 - firstName
@@ -539,7 +539,7 @@ paths:
       description: Admin users can access any account, regular users are restricted to their own account.
       operationId: getAccountById
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       responses:
         "200":
           description: Details of the specified account
@@ -581,7 +581,7 @@ paths:
       description: Admin users can update any account including role, regular users are restricted to their own account and cannot update role.
       operationId: updateAccount
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -609,7 +609,7 @@ paths:
                   example: "pass123"
                 role:
                   type: string
-                  enum: [Admin, User]
+                  enum: [ Admin, User ]
       responses:
         "200":
           description: Account updated successfully. The details of the updated account are returned.
@@ -651,7 +651,7 @@ paths:
       description: Admin users can delete any account, regular users are restricted to their own account.
       operationId: deleteAccount
       security:
-        - bearerAuth: []
+        - bearerAuth: [ ]
       responses:
         "200":
           description: Account deleted successfully
@@ -667,6 +667,219 @@ paths:
           $ref: "#/components/responses/NotFoundError"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
+
+  /publicities:
+    get:
+      summary: Get a list of all publicities
+      description: Restricted to admin users.
+      operationId: getAllPublicities
+      security:
+        - bearerAuth: [ ]
+      responses:
+        "200":
+          description: An array of all publicities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      example: "5eb12e197e06a76ccdefc121"
+                    description:
+                      type: string
+                      example: "Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum"
+                    image:
+                      type: string
+                      example: "path/to/image"
+                    isActive:
+                      type: boolean
+                      example: fasle
+
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    post:
+      summary: Create a new publicities
+      description: Restricted to admin users.
+      operationId: createPublicity
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                description:
+                  type: string
+                  example: "Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum"
+                image:
+                  type: string
+                  example: "path/to/image"
+              required:
+                - description
+                - image
+      responses:
+        "200":
+          description: Publicity created successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    example: "5eb12e197e06a76ccdefc121"
+                  description:
+                    type: string
+                    example: "Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum"
+                  image:
+                    type: string
+                    example: "path/to/image"
+                  isActive:
+                    type: boolean
+                    example: "false"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+  /publicities/{id}:
+    parameters:
+      - in: path
+        name: id
+        description: Publicity id
+        required: true
+        example: "5eb12e197e06a76ccdefc121"
+        schema:
+          type: string
+    get:
+      summary: Get a single publicity by id
+      description: Admin users can access any publicity
+      operationId: getPublicityById
+      security:
+        - bearerAuth: [ ]
+      responses:
+        "200":
+          description: Details of the specified publicity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    example: "5eb12e197e06a76ccdefc121"
+                  description:
+                    type: string
+                    example: "lorem ipsum lorem ipsum"
+                  image:
+                    type: string
+                    example: "path/to/image"
+
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    put:
+      summary: Update a publicity
+      description: Admin users can update any pub
+      operationId: updatePublicity
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                description:
+                  type: string
+                  example: "Lorem lorem"
+                image:
+                  type: string
+                  example: "path/to/image"
+                isActive:
+                  type: boolean
+                  example: true
+
+      responses:
+        "200":
+          description: publicity updated successfully. The details of the updated publicity are returned.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    example: "5eb12e197e06a76ccdefc121"
+                  description:
+                    type: string
+                    example: "lorem lorem"
+                  image:
+                    type: string
+                    example: "path/to/image"
+
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    delete:
+      summary: Delete a publicity
+      description: Admin users can delete any pub,
+      operationId: deletePublicity
+      security:
+        - bearerAuth: [ ]
+      responses:
+        "200":
+          description: Publicity deleted successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "publicity deleted successfully"
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+  /publicities/active:
+    get:
+      summary: Get a list of active publicities
+      description: Restricted to admin users.
+      operationId: getActivePublicities
+      security:
+        - bearerAuth: [ ]
+      responses:
+        "200":
+          description: An array of active publicities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      example: "5eb12e197e06a76ccdefc121"
+                    description:
+                      type: string
+                      example: "Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum"
+                    image:
+                      type: string
+                      example: "path/to/image"
+                    isActive:
+                      type: boolean
+                      example: true
+
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
 
 components:
   securitySchemes:
